# nautilus_trader_gui

./: Cargo.toml  docker-compose.yml
crates/gui/: Cargo.toml
crates/gui/src/: lib.rs  main.rs
nautilus-gui/: Cargo.toml  README.md  config.toml  docker-compose.yml  init.sql
nautilus-gui-demo/: Cargo.toml  README.md
nautilus-gui-demo/src/: main.rs
nautilus-gui/examples/: demo.rs  minimal.rs  simple.rs
nautilus-gui/src/: app.rs  lib.rs  main.rs  simple_app.rs
nautilus-gui/src/charts/: mod.rs
nautilus-gui/src/data/: mod.rs  providers.rs  websocket.rs
nautilus-gui/src/database/: mod.rs
nautilus-gui/src/models/: market_data.rs  mod.rs  order.rs  position.rs  strategy.rs
nautilus-gui/src/python/: mod.rs
nautilus-gui/src/services/: mod.rs
nautilus-gui/src/ui/: main_view.rs  mod.rs  sidebar.rs  topbar.rs
nautilus-gui/strategies/: example_sma_cross.py
schema/sql/: candles.sql
