[package]
name = "nautilus-gui-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13", features = ["canvas", "tokio", "debug"] }
egui = "0.29"
eframe = "0.29"
egui_plot = "0.29"
tokio = { version = "1.47", features = ["full"] }
rust_decimal = "1.37"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"