[package]
name = "nautilus-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI Frameworks
iced = { version = "0.13", features = ["canvas", "tokio", "debug"] }
egui = "0.29"
egui-wgpu = "0.29"
egui-winit = "0.29"
eframe = "0.29"

# Charting
egui_plot = "0.29"

# Async runtime
tokio = { version = "1.47", features = ["full"] }
tokio-postgres = "0.7"
async-trait = "0.1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP Client for data fetching
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Python integration
pyo3 = { version = "0.26", features = ["auto-initialize", "chrono"] }

# WebSocket for real-time data
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Data processing
rust_decimal = { version = "1.37", features = ["serde"] }
rust_decimal_macros = "1.37"

# Utils
once_cell = "1.21"
rand = "0.8"

[features]
default = []

[[bin]]
name = "nautilus-gui"
path = "src/main.rs"

[lib]
name = "nautilus_gui"
path = "src/lib.rs"